refactor: json 반환 관련 코드 변경