@@ -1,6 +1,7 @@
 package com.multi.mariage.category.service;
 
 import com.multi.mariage.category.domain.DrinkUpperCategory;
+import com.multi.mariage.category.dto.CategoriesResponse;
 import com.multi.mariage.category.dto.DrinkUpperCategoryResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
@@ -9,29 +10,38 @@ import org.springframework.transaction.annotation.Transactional;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Transactional(readOnly = true)
 @Service
 public class DrinkUpperCategoryService {
-    public List<DrinkUpperCategory> findAll() {
-        return Arrays.asList(DrinkUpperCategory.values());
-    }
     @Transactional
-    public List<DrinkUpperCategoryResponse> findCategoriesByOrigin(String origin) {
-        List<DrinkUpperCategory> categories = findAll();
+    public List<DrinkUpperCategoryResponse> findCategories() {
+        List<DrinkUpperCategory> categories = Arrays.asList(DrinkUpperCategory.values());
         List<DrinkUpperCategoryResponse> responseList = new ArrayList<>();
 
-        List<String> categoryList = categories.stream()
-                .filter(c -> c.getOrigin().equals(origin))
-                .map(DrinkUpperCategory::getName)
-                .collect(Collectors.toList());
+        List<String> regionList = categories.stream()
+                .map(DrinkUpperCategory::getRegion)
+                .distinct()
+                .toList();
 
-        DrinkUpperCategoryResponse response = DrinkUpperCategoryResponse.builder()
-                .category(categoryList)
-                .build();
-        responseList.add(response);
+        for (String region : regionList) {
+            List<CategoriesResponse> categoryList = categories.stream()
+                    .filter(category -> category.getRegion().equals(region))
+                    .map(category -> CategoriesResponse.builder()
+                            .name(category.name())
+                            .value(category.getName())
+                            .build())
+                    .collect(Collectors.toList());
+
+            DrinkUpperCategoryResponse response = DrinkUpperCategoryResponse.builder()
+                    .region(region)
+                    .categories(categoryList)
+                    .build();
+            responseList.add(response);
+        }
 
         return responseList;
     }
